Moved some files from src to public.

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "axis";
-  src: url("../fonts/axis.otf");
+  src: url("../../public/fonts/axis.otf");
 }
 @font-face {
   font-family: "Montserrat-Regular";
-  src: url("../fonts/Montserrat-Regular.ttf");
+  src: url("../../public/fonts/Montserrat-Regular.ttf");
 }
 @font-face {
   font-family: "Montserrat-Bold";
-  src: url("../fonts/Montserrat-Bold.ttf");
+  src: url("../../public/fonts/Montserrat-Bold.ttf");
 }
 @font-face {
   font-family: "Montserrat-ExtraBold";
-  src: url("../fonts/Montserrat-ExtraBold.ttf");
+  src: url("../../public/fonts/Montserrat-ExtraBold.ttf");
 }
 @font-face {
   font-family: "Pacifico";
-  src: url("../fonts/pacifico-regular.ttf");
+  src: url("../../public/fonts/pacifico-regular.ttf");
 }
