Refactored About component to use data from pageData.json.
Refactored About component to use data from pageData.json.
Added quick styling fix to _about.scss.

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -33,6 +33,7 @@
   }
 
   &__subtitle {
+    margin-left: 0.5625rem;
     margin-top: 0.5625rem;
     font-family: "Montserrat-Bold";
     color: var(--accent-color);
